fixed z-index on navbar

--- a/code/src/components/Navigation/NavElements.css
+++ b/code/src/components/Navigation/NavElements.css
@@ -12,7 +12,7 @@
   color: white;
   padding: 20px;
   position: relative;
-  z-index: 10px;
+  z-index: 1;
 
 }
 
@@ -38,7 +38,7 @@
   transition: all 0.5s ease-out;
   width: 100%;
   padding: 0;
-  z-index: 15px;
+  z-index: 1;
 }
 
 .nav-links-mobile a {
